force-app/main/default/objects/Vehicle_Master2__c/Vehicle_Master2__c.object-meta.xml
<CustomObject>
    <label>Stock Vehicle Master</label>
    <nameField>
        <displayFormat>RVH-{YYYY}{MM}-{0000}</displayFormat>
        <label>RVH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Vehicle Masters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>