force-app/main/default/objects/Vehicle_Master2__c/fields/Actual_Vehicle_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Vehicle_Price__c</fullName>
    <label>Actual Vehicle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>