force-app/main/default/objects/Vehicle_Master2__c/fields/Average_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Exchange_Rate__c</fullName>
    <label>TMS Average Exchange Rate</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>