force-app/main/default/objects/Vehicle_Master2__c/fields/BL_No__c.field-meta.xml
<CustomField>
    <fullName>BL_No__c</fullName>
    <label>BL No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>