force-app/main/default/objects/Vehicle_Master2__c/fields/Branch_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unique_Code__c</fullName>
    <label>Branch Unique Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>