force-app/main/default/objects/Vehicle_Master2__c/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <label>Chassis</label>
    <length>25</length>
    <type>Text</type>
</CustomField>