force-app/main/default/objects/Vehicle_Master2__c/fields/COE_Document_no__c.field-meta.xml
<CustomField>
    <fullName>COE_Document_no__c</fullName>
    <label>COE Document no.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>