force-app/main/default/objects/Vehicle_Master2__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Color Code</label>
    <referenceTo>Color_Master__c</referenceTo>
    <relationshipName>Vehicle_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>