force-app/main/default/objects/Vehicle_Master2__c/fields/customs_duty_rate__c.field-meta.xml
<CustomField>
    <fullName>customs_duty_rate__c</fullName>
    <label>TN Customs Duty Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>