force-app/main/default/objects/Vehicle_Master2__c/fields/customs_duty_uom__c.field-meta.xml
<CustomField>
    <fullName>customs_duty_uom__c</fullName>
    <label>TN Customs Duty Rate Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>