force-app/main/default/objects/Vehicle_Master2__c/fields/Delivery_Request_By__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Request_By__c</fullName>
    <label>Delivery Request By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>