force-app/main/default/objects/Vehicle_Master2__c/fields/Delivery_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Request_Date__c</fullName>
    <label>Delivery Request Date</label>
    <type>Date</type>
</CustomField>