force-app/main/default/objects/Vehicle_Master2__c/fields/Delivery_Request_No__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Request_No__c</fullName>
    <label>Delivery Request No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>