force-app/main/default/objects/Vehicle_Master2__c/fields/Demo_Car__c.field-meta.xml
<CustomField>
    <fullName>Demo_Car__c</fullName>
    <label>Demo Car</label>
    <length>1</length>
    <type>Text</type>
</CustomField>