force-app/main/default/objects/Vehicle_Master2__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <description>Discounted price for stock promotion</description>
    <label>Discounted Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>