force-app/main/default/objects/Vehicle_Master2__c/fields/Dummy_Color__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Color__c</fullName>
    <description>To store the Color for VF Reservation</description>
    <label>Dummy Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>