force-app/main/default/objects/Vehicle_Master2__c/fields/Dummy_Model__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Model__c</fullName>
    <description>To store the Model for VF Reservation</description>
    <label>Dummy Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>