force-app/main/default/objects/Vehicle_Master2__c/fields/Dummy_Trim__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Trim__c</fullName>
    <description>To store the Trim for VF Reservation</description>
    <label>Dummy Trim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>