force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Duty_Amount__c</fullName>
    <label>Duty Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>