force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Done__c.field-meta.xml
<CustomField>
    <fullName>Duty_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duty Completed</label>
    <type>Checkbox</type>
</CustomField>