force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Duty_Gain_Loss__c</fullName>
    <label>Duty Gain Loss</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>