force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Not_Covered__c.field-meta.xml
<CustomField>
    <fullName>Duty_Not_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked means Duty Not Covered.</description>
    <label>Duty Not Covered</label>
    <type>Checkbox</type>
</CustomField>