force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Request_By__c.field-meta.xml
<CustomField>
    <fullName>Duty_Request_By__c</fullName>
    <label>Duty Request By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>