force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Duty_Request_Date__c</fullName>
    <label>Duty Request Date</label>
    <type>Date</type>
</CustomField>