force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Duty_Request_Type__c</fullName>
    <label>Duty Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pay Duty</fullName>
            </value>
            <value>
                <fullName>Exempt Duty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>