force-app/main/default/objects/Vehicle_Master2__c/fields/Duty_Status__c.field-meta.xml
<CustomField>
    <fullName>Duty_Status__c</fullName>
    <label>Duty Status</label>
    <length>5</length>
    <type>Text</type>
</CustomField>