force-app/main/default/objects/Vehicle_Master2__c/fields/Estimated_Duty__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duty__c</fullName>
    <label>Estimated Duty &amp; ARF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>