force-app/main/default/objects/Vehicle_Master2__c/fields/Estimated_FOB__c.field-meta.xml
<CustomField>
    <fullName>Estimated_FOB__c</fullName>
    <label>TMS Estimated FOB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>