force-app/main/default/objects/Vehicle_Master2__c/fields/Ex_Factory_Charges__c.field-meta.xml
<CustomField>
    <fullName>Ex_Factory_Charges__c</fullName>
    <label>VPO Ex Factory Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>