force-app/main/default/objects/Vehicle_Master2__c/fields/Ex_Factory_Charges_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Ex_Factory_Charges_Currency_Code__c</fullName>
    <label>Ex Factory Charges Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>