force-app/main/default/objects/Vehicle_Master2__c/fields/excise_duty_amt__c.field-meta.xml
<CustomField>
    <fullName>excise_duty_amt__c</fullName>
    <label>TN Excise Duty amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>