force-app/main/default/objects/Vehicle_Master2__c/fields/excise_duty_rate__c.field-meta.xml
<CustomField>
    <fullName>excise_duty_rate__c</fullName>
    <label>TN Excise Duty Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>