force-app/main/default/objects/Vehicle_Master2__c/fields/excise_duty_uom__c.field-meta.xml
<CustomField>
    <fullName>excise_duty_uom__c</fullName>
    <label>TN Excise Duty Rate Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>