force-app/main/default/objects/Vehicle_Master2__c/fields/FOB_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOB_Amount__c</fullName>
    <label>Actual FOB Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>