force-app/main/default/objects/Vehicle_Master2__c/fields/FOB_date__c.field-meta.xml
<CustomField>
    <fullName>FOB_date__c</fullName>
    <label>FOB date</label>
    <type>Date</type>
</CustomField>