force-app/main/default/objects/Vehicle_Master2__c/fields/FOB_Done__c.field-meta.xml
<CustomField>
    <fullName>FOB_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOB Completed</label>
    <type>Checkbox</type>
</CustomField>