force-app/main/default/objects/Vehicle_Master2__c/fields/FOB_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>FOB_Sale_Date__c</fullName>
    <label>FOB Sale Date</label>
    <type>Date</type>
</CustomField>