force-app/main/default/objects/Vehicle_Master2__c/fields/Freight_Charges__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charges__c</fullName>
    <label>VPO Freight Charges</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>