force-app/main/default/objects/Vehicle_Master2__c/fields/Good_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Good_Receive_Date__c</fullName>
    <label>Good Receive Date</label>
    <type>Date</type>
</CustomField>