force-app/main/default/objects/Vehicle_Master2__c/fields/Good_Receive_Note__c.field-meta.xml
<CustomField>
    <fullName>Good_Receive_Note__c</fullName>
    <label>Good Receive Note</label>
    <length>10</length>
    <type>Text</type>
</CustomField>