force-app/main/default/objects/Vehicle_Master2__c/fields/gst_amt__c.field-meta.xml
<CustomField>
    <fullName>gst_amt__c</fullName>
    <label>TN GST amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>