force-app/main/default/objects/Vehicle_Master2__c/fields/gst_rate__c.field-meta.xml
<CustomField>
    <fullName>gst_rate__c</fullName>
    <label>TN GST rate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>