force-app/main/default/objects/Vehicle_Master2__c/fields/hs_qty_value__c.field-meta.xml
<CustomField>
    <fullName>hs_qty_value__c</fullName>
    <defaultValue>1</defaultValue>
    <label>TN HS Qty</label>
    <precision>15</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>