force-app/main/default/objects/Vehicle_Master2__c/fields/Insurance_Charges__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Charges__c</fullName>
    <label>VPO Insurance Charges</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>