force-app/main/default/objects/Vehicle_Master2__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>