force-app/main/default/objects/Vehicle_Master2__c/fields/Inward_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Inward_Cost_Type__c</fullName>
    <label>Inward Cost Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>