force-app/main/default/objects/Vehicle_Master2__c/fields/Inward_Declaration_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Inward_Declaration_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inward_Declaration Invoice</label>
    <referenceTo>Manufacturer_Invoice__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>