force-app/main/default/objects/Vehicle_Master2__c/fields/item_cif_fob_amt__c.field-meta.xml
<CustomField>
    <fullName>item_cif_fob_amt__c</fullName>
    <label>TN Item CIF/FOB Amount (SGD)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>