force-app/main/default/objects/Vehicle_Master2__c/fields/IU_Document_No__c.field-meta.xml
<CustomField>
    <fullName>IU_Document_No__c</fullName>
    <label>IU Document No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>