force-app/main/default/objects/Vehicle_Master2__c/fields/JIT_Date__c.field-meta.xml
<CustomField>
    <fullName>JIT_Date__c</fullName>
    <label>JIT Date</label>
    <type>Date</type>
</CustomField>