force-app/main/default/objects/Vehicle_Master2__c/fields/JIT_Day__c.field-meta.xml
<CustomField>
    <fullName>JIT_Day__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JIT Day</label>
    <referenceTo>JIT_Day__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>