force-app/main/default/objects/Vehicle_Master2__c/fields/JIT_Remark__c.field-meta.xml
<CustomField>
    <fullName>JIT_Remark__c</fullName>
    <label>JIT Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>