force-app/main/default/objects/Vehicle_Master2__c/fields/Manufacturer_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Ref_No__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Manufacturer Ref. No.</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>