force-app/main/default/objects/Vehicle_Master2__c/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model Code</label>
    <referenceTo>Model_Master__c</referenceTo>
    <relationshipName>Vehicle_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>