force-app/main/default/objects/Vehicle_Master2__c/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <label>VPO Other Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>