force-app/main/default/objects/Vehicle_Master2__c/fields/outer_qty_uom__c.field-meta.xml
<CustomField>
    <fullName>outer_qty_uom__c</fullName>
    <label>TN Total Outer Pack Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>