force-app/main/default/objects/Vehicle_Master2__c/fields/outer_qty_value__c.field-meta.xml
<CustomField>
    <fullName>outer_qty_value__c</fullName>
    <label>TN Total Outer Pack</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>