force-app/main/default/objects/Vehicle_Master2__c/fields/PARF_Benefit_CNC__c.field-meta.xml
<CustomField>
    <fullName>PARF_Benefit_CNC__c</fullName>
    <label>PARF Benefit CNC</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>