force-app/main/default/objects/Vehicle_Master2__c/fields/PDI__c.field-meta.xml
<CustomField>
    <fullName>PDI__c</fullName>
    <label>PDI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>