force-app/main/default/objects/Vehicle_Master2__c/fields/PDI_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>PDI_Completion_Date__c</fullName>
    <label>PDI Completion Date</label>
    <type>Date</type>
</CustomField>