force-app/main/default/objects/Vehicle_Master2__c/fields/prod_qty_uom__c.field-meta.xml
<CustomField>
    <fullName>prod_qty_uom__c</fullName>
    <defaultValue>&quot;TNE&quot;</defaultValue>
    <label>TN Product Qty UOM</label>
    <length>3</length>
    <type>Text</type>
</CustomField>