force-app/main/default/objects/Vehicle_Master2__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Product Code</label>
    <referenceTo>Product_Code__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>