force-app/main/default/objects/Vehicle_Master2__c/fields/ProductionMonth__c.field-meta.xml
<CustomField>
    <fullName>ProductionMonth__c</fullName>
    <label>Production Month</label>
    <type>Date</type>
</CustomField>