force-app/main/default/objects/Vehicle_Master2__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KIA Warehouse</fullName>
            </value>
            <value>
                <fullName>MIT Warehouse</fullName>
            </value>
            <value>
                <fullName>CIT Warehouse</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>