force-app/main/default/objects/Vehicle_Master2__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used for Treasury Management</description>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>