force-app/main/default/objects/Vehicle_Master2__c/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <label>Purchase Order No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>