force-app/main/default/objects/Vehicle_Master2__c/fields/Purchase_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Status__c</fullName>
    <label>Purchase Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>