force-app/main/default/objects/Vehicle_Master2__c/fields/Registration_no__c.field-meta.xml
<CustomField>
    <fullName>Registration_no__c</fullName>
    <label>Registration no.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>