force-app/main/default/objects/Vehicle_Master2__c/fields/Request_Registration_By__c.field-meta.xml
<CustomField>
    <fullName>Request_Registration_By__c</fullName>
    <label>Request Registration By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>