force-app/main/default/objects/Vehicle_Master2__c/fields/Request_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Registration_Date__c</fullName>
    <label>Request Registration Date</label>
    <type>Date</type>
</CustomField>