force-app/main/default/objects/Vehicle_Master2__c/fields/Reservation_No__c.field-meta.xml
<CustomField>
    <fullName>Reservation_No__c</fullName>
    <label>Reservation No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>