force-app/main/default/objects/Vehicle_Master2__c/fields/Reservation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Start_Date__c</fullName>
    <label>Reservation Start Date</label>
    <type>DateTime</type>
</CustomField>