force-app/main/default/objects/Vehicle_Master2__c/fields/Shipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Shipment_ID__c</fullName>
    <label>Shipment ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>