force-app/main/default/objects/Vehicle_Master2__c/fields/Shipment_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Line Item</label>
    <referenceTo>Shipment_Line_Item__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>