force-app/main/default/objects/Vehicle_Master2__c/fields/Standard_Accural__c.field-meta.xml
<CustomField>
    <fullName>Standard_Accural__c</fullName>
    <label>Standard Accural</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>