force-app/main/default/objects/Vehicle_Master2__c/fields/Stock_Promotion_Comment__c.field-meta.xml
<CustomField>
    <fullName>Stock_Promotion_Comment__c</fullName>
    <label>Stock Promotion Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>