force-app/main/default/objects/Vehicle_Master2__c/fields/Stock_Promotion_Status__c.field-meta.xml
<CustomField>
    <fullName>Stock_Promotion_Status__c</fullName>
    <label>Stock Promotion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>REM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>