force-app/main/default/objects/Vehicle_Master2__c/fields/Stock_Promotion_Vehicle_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Promotion_Vehicle_Sub_Type__c</fullName>
    <label>Stock Promotion Vehicle Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stock_Promotion_Vehicle_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>