force-app/main/default/objects/Vehicle_Master2__c/fields/Stock_Promotion_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Promotion_Vehicle_Type__c</fullName>
    <label>Stock Promotion Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Cars</fullName>
            </value>
            <value>
                <fullName>Promotional Cars</fullName>
            </value>
            <value>
                <fullName>Exclusive car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>