force-app/main/default/objects/Vehicle_Master2__c/fields/Supplementary_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Invoice_No__c</fullName>
    <label>Supplementary Invoice No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>