force-app/main/default/objects/Vehicle_Master2__c/fields/System_Commcase__c.field-meta.xml
<CustomField>
    <fullName>System_Commcase__c</fullName>
    <label>System Commcase</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>