force-app/main/default/objects/Vehicle_Master2__c/fields/TMS_Estimated_FOB_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>TMS_Estimated_FOB_Currency_Code__c</fullName>
    <label>TMS Estimated FOB Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>