force-app/main/default/objects/Vehicle_Master2__c/fields/TMS_Estimated_OMV__c.field-meta.xml
<CustomField>
    <fullName>TMS_Estimated_OMV__c</fullName>
    <label>TMS Estimated OMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>