force-app/main/default/objects/Vehicle_Master2__c/fields/TMS_Final_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>TMS_Final_Sale_Date__c</fullName>
    <label>TMS Final Sale Date</label>
    <type>Date</type>
</CustomField>