force-app/main/default/objects/Vehicle_Master2__c/fields/TMS_Insurance__c.field-meta.xml
<CustomField>
    <fullName>TMS_Insurance__c</fullName>
    <label>TMS Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>