force-app/main/default/objects/Vehicle_Master2__c/fields/TN_HS_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_HS_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN HS Code</label>
    <referenceTo>HS_Type__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>