force-app/main/default/objects/Vehicle_Master2__c/fields/TN_HS_Unit__c.field-meta.xml
<CustomField>
    <fullName>TN_HS_Unit__c</fullName>
    <formula>TN_HS_Code__r.HS_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN HS Qty UOM</label>
    <type>Text</type>
</CustomField>