force-app/main/default/objects/Vehicle_Master2__c/fields/TN_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>TN_Item_Description__c</fullName>
    <label>TN Item Description</label>
    <type>TextArea</type>
</CustomField>