force-app/main/default/objects/Vehicle_Master2__c/fields/tot_dutiable_qty_uom__c.field-meta.xml
<CustomField>
    <fullName>tot_dutiable_qty_uom__c</fullName>
    <label>TN Total Dutiable Qty/Weight/Volume Unit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>