force-app/main/default/objects/Vehicle_Master2__c/fields/tot_dutiable_qty_value__c.field-meta.xml
<CustomField>
    <fullName>tot_dutiable_qty_value__c</fullName>
    <label>TN Total Dutiable Quantity/Weight/Volume</label>
    <precision>15</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>