force-app/main/default/objects/Vehicle_Master2__c/fields/Transport_Charges__c.field-meta.xml
<CustomField>
    <fullName>Transport_Charges__c</fullName>
    <label>VPO Transport Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>