force-app/main/default/objects/Vehicle_Master2__c/fields/Trim_Code__c.field-meta.xml
<CustomField>
    <fullName>Trim_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trim Code</label>
    <referenceTo>Trim_Master__c</referenceTo>
    <relationshipName>Vehicle_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>