force-app/main/default/objects/Vehicle_Master2__c/fields/Up_Lift_Charges__c.field-meta.xml
<CustomField>
    <fullName>Up_Lift_Charges__c</fullName>
    <label>Up Lift Charges</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>