force-app/main/default/objects/Vehicle_Master2__c/fields/Up_Lift_Per__c.field-meta.xml
<CustomField>
    <fullName>Up_Lift_Per__c</fullName>
    <label>Up Lift Per</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>