force-app/main/default/objects/Vehicle_Master2__c/fields/Vehcile_Bay_No__c.field-meta.xml
<CustomField>
    <fullName>Vehcile_Bay_No__c</fullName>
    <label>Vehcile Bay No.</label>
    <length>5</length>
    <type>Text</type>
</CustomField>