force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Condition__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Condition__c</fullName>
    <label>Vehicle Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Test Drive Car</fullName>
            </value>
            <value>
                <fullName>Display Car</fullName>
            </value>
            <value>
                <fullName>Demo Car</fullName>
                <isActive>false</isActive>
                <label>Demo Car</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>