force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Cost__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Cost__c</fullName>
    <label>Vehicle Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>