force-app/main/default/objects/Vehicle_Master2__c/fields/Vehicle_Purchase_Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Purchase_Order_Line_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Purchase Order Line Items</label>
    <referenceTo>Vehicle_Purchase_Order_Line_Items__c</referenceTo>
    <relationshipLabel>Stock Vehicle Masters</relationshipLabel>
    <relationshipName>Stock_Vehicle_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>